--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,4 +24,11 @@ repos:
       - id: mypy
         types: [python]
         args: [--strict, --ignore-missing-imports]
-        additional_dependencies: []
+        additional_dependencies: [
+          'fastapi',
+          'httpx',
+          'pydantic',
+          'pydantic_settings',
+          'pyjwt',
+          'structlog',
+        ]
