--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,14 @@ version = "0.1.0"
 description = "FastAPI på NAIS plattformen"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "fastapi[standard]>=0.115.0",
+    "pydantic>=2.9.2",
+    "pydantic-settings>=2.5.2",
+    "pyjwt>=2.9.0",
+    "structlog>=24.4.0",
+    "httpx>=0.27.2",
+]
 
 [build-system]
 requires = ["hatchling"]
