Pass på å ikke bruke release candidate
I skrivende stund er Python 3.13 i release candidate versjon og `uv` har en
tendens til å velge denne selv om ingenting ser ut til å fungere. Vi
spesifiserer derfor at vi ikke er kompatible med denne versjonen.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "nais-fastapi-template"
 version = "0.1.0"
 description = "FastAPI på NAIS plattformen"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.13"
 dependencies = [
     "fastapi[standard]>=0.115.0",
     "pydantic>=2.9.2",
