--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,13 @@ description = "FastAPI på NAIS plattformen"
 readme = "README.md"
 requires-python = ">=3.10,<3.13"
 dependencies = [
+    "cryptography>=43.0.1",
     "fastapi[standard]>=0.115.0",
-    "pydantic>=2.9.2",
+    "httpx>=0.27.2",
     "pydantic-settings>=2.5.2",
+    "pydantic>=2.9.2",
     "pyjwt>=2.9.0",
     "structlog>=24.4.0",
-    "httpx>=0.27.2",
 ]
 
 [build-system]
